--- a/projects.json
+++ b/projects.json
@@ -1,3 +1,12 @@
+/*
+ * Projects Data File
+ * 
+ * IMPORTANT: Image URLs are placeholder URLs from picsum.photos
+ * Client Action Required: Replace all image URLs with final image paths
+ * Example format: "/images/project-name/image.jpg"
+ * 
+ * Ensure all final images are optimized for web use and include proper alt text
+ */
 [
   {
     "id": "serene-courtyard-house",
